исправила замечания